[gd_scene load_steps=14 format=3 uid="uid://ci3ugvvfqe1qy"]

[ext_resource type="Theme" uid="uid://etxhywncatso" path="res://graphics/global_theme.tres" id="1_i4sis"]
[ext_resource type="Script" uid="uid://bk571ij27ski5" path="res://resources/core/code_completion_resource.gd" id="2_037gb"]
[ext_resource type="Resource" uid="uid://cqwrnue4ejuti" path="res://resources/boards/arduino_uno.tres" id="2_cctyv"]
[ext_resource type="Script" uid="uid://c8facwd4t0bu3" path="res://scripts/serial_communication/code_editor.gd" id="2_xqpb2"]
[ext_resource type="Resource" uid="uid://cn38a3o2u65yq" path="res://resources/core/default_canadits.tres" id="2_y6fiy"]
[ext_resource type="Script" uid="uid://bbxla4qvxkyl2" path="res://scripts/serial_communication/port_list.gd" id="4_cctyv"]
[ext_resource type="FontFile" uid="uid://bu2y6rrhr31rx" path="res://graphics/fonts/JetBrainsMonoNL-Regular.ttf" id="4_ys1v0"]
[ext_resource type="Script" uid="uid://4as1lu3lsvt8" path="res://resources/boards/board_resource.gd" id="6_fq2oj"]
[ext_resource type="Resource" uid="uid://6k38vih27ib6" path="res://resources/boards/rp2040_trinkey.tres" id="7_q003l"]
[ext_resource type="Script" uid="uid://c4be3xx8423x7" path="res://resources/libraries/library_resource.gd" id="8_pxvkl"]
[ext_resource type="Resource" uid="uid://5ag2vqabsr2o" path="res://resources/libraries/adafruit_soil_sensor.tres" id="9_edcjm"]
[ext_resource type="Script" uid="uid://ey5u33d4lbc3" path="res://scripts/serial_communication/serial_monitor.gd" id="10_yxof0"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_cctyv"]
number_color = Color(0.933333, 0.913725, 0.541176, 1)
symbol_color = Color(0.266667, 0.388235, 0.454902, 1)
function_color = Color(0.623529, 0.235294, 0.568627, 1)
member_variable_color = Color(0.737255, 0.34902, 0.376471, 1)
keyword_colors = {
"": Color(0, 0, 0, 1),
"analogRead": Color(0.505882, 0.686275, 0.709804, 1),
"analogWrite": Color(0.505882, 0.686275, 0.709804, 1),
"const": Color(0.568627, 0.227451, 0.321569, 1),
"delay": Color(0.568627, 0.227451, 0.321569, 1),
"digitalRead": Color(0.505882, 0.686275, 0.709804, 1),
"digitalWrite": Color(0.505882, 0.686275, 0.709804, 1),
"int": Color(0.568627, 0.227451, 0.321569, 1),
"loop": Color(0.364706, 0.654902, 0.364706, 1),
"pinMode": Color(0.505882, 0.686275, 0.709804, 1),
"setup": Color(0.933333, 0.913725, 0.541176, 1)
}
color_regions = {
"\" \"": Color(0.89484173, 0.7233038, 0.46552026, 0.7607843),
"//": Color(0.681994, 0.942753, 0.991644, 0.617)
}

[node name="CodeEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_i4sis")
script = ExtResource("2_xqpb2")
code_completion_canadits = Array[ExtResource("2_037gb")]([ExtResource("2_y6fiy")])
boards_info = Array[ExtResource("6_fq2oj")]([ExtResource("2_cctyv"), ExtResource("7_q003l")])
arduino_libraries = Array[ExtResource("8_pxvkl")]([ExtResource("9_edcjm")])

[node name="CodeEdit" type="CodeEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 509.0
grow_vertical = 2
theme = ExtResource("1_i4sis")
text = "void setup() {
  Serial.begin(115200);
  
}

void loop() {
  
}"
placeholder_text = "Enter your Arduino code here"
scroll_smooth = true
minimap_draw = true
caret_blink = true
syntax_highlighter = SubResource("CodeHighlighter_cctyv")
highlight_all_occurrences = true
symbol_lookup_on_click = true
symbol_tooltip_on_hover = true
gutters_draw_line_numbers = true
indent_size = 2
indent_use_spaces = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="Compile" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_right = 59.5
offset_bottom = 33.0
grow_horizontal = 2
text = "Compile Code"

[node name="Upload" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.5
offset_top = -33.0
offset_right = 59.5
grow_horizontal = 2
grow_vertical = 0
text = "Upload"

[node name="PortList" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -288.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("4_ys1v0")
script = ExtResource("4_cctyv")

[node name="FoldableContainer" type="FoldableContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -117.0
offset_bottom = 117.0
grow_horizontal = 0
grow_vertical = 2
folded = true
title = "Serial Monitor"

[node name="SerialMonitor" type="RichTextLabel" parent="FoldableContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_i4sis")
script = ExtResource("10_yxof0")

[connection signal="focus_entered" from="CodeEdit" to="." method="_on_code_edit_focus_entered"]
[connection signal="focus_exited" from="CodeEdit" to="." method="_on_code_edit_focus_exited"]
[connection signal="gutter_clicked" from="CodeEdit" to="." method="_on_code_edit_gutter_clicked"]
[connection signal="text_changed" from="CodeEdit" to="." method="_on_code_edit_text_changed"]
[connection signal="pressed" from="Compile" to="." method="_on_compile_pressed"]
[connection signal="pressed" from="Upload" to="." method="_on_upload_pressed"]
[connection signal="item_selected" from="PortList" to="PortList" method="_on_item_selected"]
[connection signal="pressed" from="PortList" to="PortList" method="_on_pressed"]
